# alembic_101

./: README.md  alembic.ini  comandos_usados.txt  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f9273c29cb8_criando_tabela_pessoa_2.py  5c4a1ec24e87_primeira_migração.py  ca305f62830c_criando_campo_de_senha_na_tabela_pessoa.py  cbeb7655d6d2_mudando_tamanho_do_campo_email.py  d8ef4bed783a_adicionando_campo_idade_na_tabela_.py
