[tool.poetry]
name = "alembic-101"
version = "0.1.0"
description = "Uma breve introdução ao Alembic"
authors = ["Vinicius Saito <viniciusaitosilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
alembic = "^1.13.1"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
sqlacodegen = "3.0.0rc1"
sqlalchemy = "==2.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
